--- a/html/contactus.html
+++ b/html/contactus.html
@@ -221,7 +221,7 @@
                   >
                   <a href="tel:9900990099">9900990099</a>
                   <div class="footer-btn"></div>
-                  <button>CONTACT US</button>
+                  <button><a href="contactus.html">CONTACT US</a></button>
                 </div>
               </div>
               <div class="address common-style">
@@ -236,7 +236,7 @@
                   </p>
                 </div>
                 <div class="footer-btn">
-                  <button>GET DIRECTION</button>
+                  <button><a href="contactus.html">GET DIRECTION</a></button>
                 </div>
               </div>
               <div class="opening-hours common-style">
